// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataBrokerService should get data by key 1`] = `
{
  "data": {
    "foo": "sample_data_from_cache",
  },
  "statusCode": 200,
}
`;

exports[`DataBrokerService should get data if refresh is forced 1`] = `
{
  "created": 2000,
  "data": {
    "foo": "sample_data_from_sc2api_service_mock",
  },
  "statusCode": 200,
}
`;
